--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -1539,6 +1539,164 @@
       </column>
      </widget>
     </widget>
+    <widget class="QWidget" name="statistics">
+     <attribute name="title">
+      <string>Statistics</string>
+     </attribute>
+     <widget class="QTableWidget" name="Statistics">
+      <property name="geometry">
+       <rect>
+        <x>5</x>
+        <y>34</y>
+        <width>1001</width>
+        <height>571</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="cursor" stdset="0">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
+      <property name="tabKeyNavigation">
+       <bool>false</bool>
+      </property>
+      <property name="showDropIndicator" stdset="0">
+       <bool>false</bool>
+      </property>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::DotLine</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>false</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>120</number>
+      </attribute>
+      <attribute name="horizontalHeaderHighlightSections">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>120</number>
+      </attribute>
+      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>27</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>27</number>
+      </attribute>
+      <column>
+       <property name="text">
+        <string/>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Item list</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Totals</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Percent (%)</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QComboBox" name="comboBoxStatistics">
+      <property name="geometry">
+       <rect>
+        <x>5</x>
+        <y>6</y>
+        <width>181</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <item>
+       <property name="text">
+        <string>Counts by Countries</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Controlers by Country</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Pilots by Country</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Airports traffics (all)</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Airlines</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Aircraft (manufacture)</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Aircraft (type)</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Passengers on Boards</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Type of Flights</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Pilots homes countries</string>
+       </property>
+      </item>
+     </widget>
+    </widget>
     <widget class="QWidget" name="database">
      <attribute name="title">
       <string>Database</string>
@@ -1719,7 +1877,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>20</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
