* Add new item to statistics
	+ Added new option item in statistics 'Facility Type'
	+ Now can see statistics for controllers
	+ Fixed airlines statistics when airline not exist into DB

--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -1692,6 +1692,11 @@
       </item>
       <item>
        <property name="text">
+        <string>Facility Type</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
         <string>Pilots homes countries</string>
        </property>
       </item>
