* New statistics ready
    + Can see now statistics for Type of Flight
    + Fixed some typo error
    + Fixed some reserved word to more legible code for Sqlite

--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -1657,7 +1657,7 @@
       </item>
       <item>
        <property name="text">
-        <string>Controlers by Country</string>
+        <string>Controllers by Country</string>
        </property>
       </item>
       <item>
