--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -1646,7 +1646,7 @@
        <rect>
         <x>5</x>
         <y>6</y>
-        <width>181</width>
+        <width>231</width>
         <height>24</height>
        </rect>
       </property>
@@ -1667,7 +1667,7 @@
       </item>
       <item>
        <property name="text">
-        <string>Airports traffics (all)</string>
+        <string>Airports traffics (inbound/outbound)</string>
        </property>
       </item>
       <item>
@@ -1882,7 +1882,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>21</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
@@ -1917,7 +1917,7 @@
   </action>
   <action name="actionUpdate">
    <property name="text">
-    <string>Update</string>
+    <string>Update / Refresh Data</string>
    </property>
   </action>
   <action name="actionAbout">
@@ -1932,7 +1932,7 @@
   </action>
   <action name="actionUpdate_Map">
    <property name="text">
-    <string>Update Map</string>
+    <string>Show whole Map</string>
    </property>
   </action>
  </widget>
