--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -1652,7 +1652,7 @@
       </property>
       <item>
        <property name="text">
-        <string notr="true">Counts by Countries</string>
+        <string notr="true">Countries with more players</string>
        </property>
       </item>
       <item>
@@ -1882,7 +1882,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>24</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
