--- a/QtUI/PilotInfo_UI.ui
+++ b/QtUI/PilotInfo_UI.ui
@@ -648,7 +648,7 @@
    <widget class="QLabel" name="TransponderText">
     <property name="geometry">
      <rect>
-      <x>357</x>
+      <x>311</x>
       <y>460</y>
       <width>41</width>
       <height>20</height>
@@ -670,7 +670,7 @@
    <widget class="QLabel" name="TransponderLabel">
     <property name="geometry">
      <rect>
-      <x>270</x>
+      <x>224</x>
       <y>462</y>
       <width>91</width>
       <height>16</height>
@@ -1136,6 +1136,52 @@
      <string>FL (Filed)</string>
     </property>
    </widget>
+   <widget class="QLabel" name="time_online">
+    <property name="geometry">
+     <rect>
+      <x>363</x>
+      <y>462</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Sans Serif</family>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Time Online:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="time_online_text">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>460</y>
+      <width>41</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Sans Serif</family>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
    <zorder>Aircraft</zorder>
    <zorder>PilotDetails</zorder>
    <zorder>GroupDetails</zorder>
@@ -1183,6 +1229,8 @@
    <zorder>GSFiledText</zorder>
    <zorder>FLText</zorder>
    <zorder>FLFiled</zorder>
+   <zorder>time_online</zorder>
+   <zorder>time_online_text</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
