--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -1702,6 +1702,285 @@
       </item>
      </widget>
     </widget>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>Scheduling</string>
+     </attribute>
+     <widget class="QTableWidget" name="SchedulingATC">
+      <property name="geometry">
+       <rect>
+        <x>4</x>
+        <y>25</y>
+        <width>1002</width>
+        <height>281</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="cursor" stdset="0">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="tabKeyNavigation">
+       <bool>false</bool>
+      </property>
+      <property name="showDropIndicator" stdset="0">
+       <bool>false</bool>
+      </property>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::DotLine</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>false</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>90</number>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>90</number>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>27</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>27</number>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>Name</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Position</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Start Date UTC</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>End Date UTC</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Voice</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Training</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Event</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QTableWidget" name="SchedulingFlights">
+      <property name="geometry">
+       <rect>
+        <x>4</x>
+        <y>330</y>
+        <width>1002</width>
+        <height>271</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
+      <property name="cursor" stdset="0">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="tabKeyNavigation">
+       <bool>false</bool>
+      </property>
+      <property name="showDropIndicator" stdset="0">
+       <bool>false</bool>
+      </property>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::DotLine</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>false</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>90</number>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>90</number>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>27</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>27</number>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>Name</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Callsign</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Airplane</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Departure</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Time</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Destination</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Time</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Altitude</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Cruising Speed</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Route</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Voice</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Training</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Event</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QLabel" name="SchedulingATCLabel">
+      <property name="geometry">
+       <rect>
+        <x>2</x>
+        <y>7</y>
+        <width>141</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="text">
+       <string>Scheduling for ATC</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="SchedulingFlightsLabel">
+      <property name="geometry">
+       <rect>
+        <x>2</x>
+        <y>312</y>
+        <width>161</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Sans Serif</family>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="text">
+       <string>Scheduling for Flights</string>
+      </property>
+     </widget>
+    </widget>
     <widget class="QWidget" name="database">
      <attribute name="title">
       <string>Database</string>
@@ -1882,7 +2161,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>23</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
@@ -1891,6 +2170,7 @@
     </property>
     <addaction name="actionSetting"/>
     <addaction name="actionUpdate"/>
+    <addaction name="actionUpdate_Scheduling"/>
     <addaction name="actionUpdate_Map"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
@@ -1917,7 +2197,7 @@
   </action>
   <action name="actionUpdate">
    <property name="text">
-    <string>Update / Refresh Data</string>
+    <string>Get data from IVAO</string>
    </property>
   </action>
   <action name="actionAbout">
@@ -1933,6 +2213,11 @@
   <action name="actionUpdate_Map">
    <property name="text">
     <string>Show whole Map</string>
+   </property>
+  </action>
+  <action name="actionUpdate_Scheduling">
+   <property name="text">
+    <string>Show Scheduling</string>
    </property>
   </action>
  </widget>
