--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -1771,6 +1771,16 @@
       </attribute>
       <column>
        <property name="text">
+        <string>Flag</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Country</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
         <string>Name</string>
        </property>
       </column>
@@ -1870,7 +1880,7 @@
       </attribute>
       <column>
        <property name="text">
-        <string>Name</string>
+        <string>Airline</string>
        </property>
       </column>
       <column>
@@ -1880,7 +1890,17 @@
       </column>
       <column>
        <property name="text">
+        <string>Name</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
         <string>Airplane</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Flag</string>
        </property>
       </column>
       <column>
@@ -1891,6 +1911,11 @@
       <column>
        <property name="text">
         <string>Time</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Flag</string>
        </property>
       </column>
       <column>
@@ -2161,7 +2186,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
@@ -2170,7 +2195,6 @@
     </property>
     <addaction name="actionSetting"/>
     <addaction name="actionUpdate"/>
-    <addaction name="actionUpdate_Scheduling"/>
     <addaction name="actionUpdate_Map"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
